@@ -9,12 +9,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -41,13 +43,20 @@ public class JwtFilter extends OncePerRequestFilter {
 
                 if(user!=null)
                 {
-                    UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(user,null, Collections.emptyList());
+//                    before rbac
+//                    UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(user,null, Collections.emptyList());
+
+                    UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(user,null, List.of(new SimpleGrantedAuthority("ROLE_"+user.getRole().getName())));
                     SecurityContextHolder.getContext().setAuthentication(authToken);
                     System.out.println("Authenticated user: "+email);
+
+                    System.out.println("ROLE: " + user.getRole().getName());
+
                 }
 
             }
         }
+
 
         filterChain.doFilter(request,response);
     }
